Fourth Commit - SignUp Auth Controller

--- a/Frontend/src/Components/dashboard/Dashboard.css
+++ b/Frontend/src/Components/dashboard/Dashboard.css
@@ -20,7 +20,7 @@
     --black2: #999;
 }
 
-body {
+.body1 {
     min-height: 100vh;
 
 }
@@ -137,7 +137,7 @@ body {
 }
 
 
-.main {
+.main1 {
     position: absolute;
     width: calc(100% - 300px);
     left: 250px;
