--- a/Frontend/src/Components/dashboard/Dashboard.css
+++ b/Frontend/src/Components/dashboard/Dashboard.css
@@ -3,14 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
-}
-
 :root {
     --blue: #554fc5;
     --darkblue: #2c286c;
@@ -21,16 +13,19 @@
 }
 
 .body1 {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
     min-height: 100vh;
-
 }
 
-.container {
+.container1 {
     position: relative;
     width: 100%;
 }
 
-.navigation {
+.navigation1 {
     position: fixed;
     width: 250px;
     height: 100%;
@@ -40,19 +35,19 @@
     overflow: hidden;
 }
 
-.navigation.active {
+.navigation1.active {
     width: 80px;
 }
 
 
-.navigation ul {
+.navigation1 ul {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
 }
 
-.navigation ul li {
+.navigation1 ul li {
     position: relative;
     width: 100%;
     list-style: none;
@@ -60,17 +55,17 @@
     border-bottom-left-radius: 30px;
 }
 
-.navigation ul li:hover,
-.navigation ul li.hovered {
+.navigation1 ul li:hover,
+.navigation1 ul li.hovered {
     background: var(--white);
 }
 
-.navigation ul li:nth-child(1) {
+.navigation1 ul li:nth-child(1) {
     margin-bottom: 20px;
     pointer-events: none;
 }
 
-.navigation ul li a {
+.navigation1 ul li a {
     position: relative;
     display: block;
     width: 100%;
@@ -79,13 +74,13 @@
     color: var(--white);
 }
 
-.navigation ul li:hover a,
-.navigation ul li.hovered a {
+.navigation1 ul li:hover a,
+.navigation1 ul li.hovered a {
     transition: 0.5s;
     color: var(--blue);
 }
 
-.navigation ul li a .icon {
+.navigation1 ul li a .icon {
     position: relative;
     display: block;
     min-width: 60px;
@@ -94,11 +89,11 @@
     text-align: center;
 }
 
-.navigation ul li a .icon ion-icon {
+.navigation1 ul li a .icon ion-icon {
     font-size: 1.75em;
 }
 
-.navigation ul li a .title {
+.navigation1 ul li a .title {
     position: relative;
     display: block;
     padding: 0 10px;
@@ -108,8 +103,8 @@
     white-space: nowrap;
 }
 
-.navigation ul li:hover a::before,
-.navigation ul li.hovered a::before {
+.navigation1 ul li:hover a::before,
+.navigation1 ul li.hovered a::before {
     content: '';
     position: absolute;
     right: 0;
@@ -122,8 +117,8 @@
     pointer-events: none;
 }
 
-.navigation ul li:hover a::after,
-.navigation ul li.hovered a::after {
+.navigation1 ul li:hover a::after,
+.navigation1 ul li.hovered a::after {
     content: '';
     position: absolute;
     right: 0;
@@ -146,7 +141,7 @@
     transition: 0.5s;
 }
 
-.main.active {
+.main1.active {
     width: calc(100% - 80px);
     left: 80px;
 }
@@ -171,18 +166,18 @@
     cursor: pointer;
 }
 
-.search {
+.search1 {
     position: relative;
     width: 400px;
     margin: 0 10px;
 }
 
-.search label {
+.search1 label {
     position: relative;
     width: 100%;
 }
 
-.search label input {
+.search1 label input {
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -192,7 +187,7 @@
     border: 1px solid var(--black2);
 }
 
-.search label ion-icon {
+.search1 label ion-icon {
     position: absolute;
     top: 0;
     left: 10px;
@@ -356,7 +351,7 @@
     text-align: end;
 }
 
-.status.delivered {
+.status1.delivered {
     padding: 2px 4px;
     background: #8de02c;
     color: var(--white);
@@ -364,7 +359,7 @@
     font-size: 14px;
 }
 
-.status.pending {
+.status1.pending {
     padding: 2px 4px;
     background: #d21010;
     color: var(--white);
@@ -372,7 +367,7 @@
     font-size: 14px;
 }
 
-.status.progress {
+.status1.progress {
     padding: 2px 4px;
     background: #08accd;
     color: var(--white);
@@ -435,21 +430,21 @@
 }
 
 @media (max-width: 991px) {
-    .navigation {
+    .navigation1{
         left: -250px;
     }
 
-    .navigation.active {
+    .navigation1.active {
         width: 250px;
         left: 0;
     }
 
-    .main {
+    .main1 {
         width: 100%;
         left: 0;
     }
 
-    .main.active {
+    .main1.active {
         left: 250px;
     }
 
@@ -467,7 +462,7 @@
         overflow-x: auto;
     }
 
-    .status.progress {
+    .status1.progress {
         white-space: nowrap;
     }
 }
@@ -485,13 +480,13 @@
         min-width: 40px;
     }
 
-    .navigation {
+    .navigation1 {
         width: 100%;
         left: -100%;
         z-index: 1000;
     }
 
-    .navigation.active {
+    .navigation1.active {
         width: 100%;
         left: 0;
     }
@@ -500,7 +495,7 @@
         z-index: 10001;
     }
 
-    .main.active .toggle {
+    .main1.active .toggle {
         position: fixed;
         right: 0;
         left: initial;
